bynkc/tests/fixtures/negative/209_bearer_on_cron/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor User { auth = Bearer(secret = "JWT_KEY"), identity = UserId }

service jobs from cron {
  on schedule("* * * * *") () -> Effect[Result[(), String]] by u: User {
    Ok(())
  }
}
